[tool.poetry]
name = "fawlty"
version = "0.1.0"
description = "A Python library for interacting with a SensuGo server"
authors = ["Cole Tuininga <cole.tuininga@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
pydantic = "^2.10.4"
bcrypt = "^4.2.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.6.1"
pymdown-extensions = "^10.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
