[tool.poetry]
name = "fawlty"
version = "0.2.0"
description = "A Python library for interacting with a SensuGo server"
authors = ["Cole Tuininga <cole.tuininga@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.0"
requests = "^2.32.3"
pydantic = "^2.10.4"
bcrypt = "^4.2.1"
flake8 = "^7.1.1"
pylint = "^3.3.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.poetry.dev-dependencies]
mkdocs = "^1.6.1"
pymdown-extensions = "^10.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
